--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ li.seasons a{
     </p>
     <footer>
     <p><small>&copy; 2021 by 
-      Zantana Kahsay, All Rights Reserved ~ 
+        YOUR NAME HERE, All Rights Reserved ~ 
         <a id="html-checker" href="#">Check HTML</a> ~ 
         <a id="css-checker" href="#">Check CSS</a></small>
     </p>
@@ -144,7 +144,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#005393");
 
-                alert("Wow, it's freezing cold.");
+                alert("Wow, it's freezing.");
               }
               
               else {
@@ -154,7 +154,7 @@ Winter: #005393
 
                 $("html").css("background-color", "#ccc");
 
-                alert("You clicked on the Default page, NICE!");
+                alert("You clicked on the Default page, BORING!");
               }
            
          //alert("I'm clicked!");
